--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -78,5 +78,19 @@
             android:text="积分商城"
             android:textColor="@drawable/selector_home_text"
             android:textSize="12sp" />
+
+        <RadioButton
+            android:id="@+id/group_my"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:button="@null"
+            android:drawableTop="@drawable/selector_my"
+            android:gravity="center"
+            android:paddingBottom="5dp"
+            android:paddingTop="5dp"
+            android:text="个人中心"
+            android:textColor="@drawable/selector_home_text"
+            android:textSize="12sp" />
     </RadioGroup>
 </RelativeLayout>
