--- a/app/src/main/res/layout/activity_tail_list.xml
+++ b/app/src/main/res/layout/activity_tail_list.xml
@@ -74,6 +74,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/tail_list_city"
                         android:layout_width="0dp"
                         android:layout_height="27dp"
                         android:layout_gravity="center_vertical"
@@ -89,6 +90,7 @@
                         android:textSize="12sp" />
 
                     <TextView
+                        android:id="@+id/tail_list_destination"
                         android:layout_width="0dp"
                         android:layout_height="27dp"
                         android:layout_gravity="center_vertical"
@@ -102,6 +104,7 @@
                         android:textSize="12sp" />
 
                     <TextView
+                        android:id="@+id/tail_list_nature"
                         android:layout_width="0dp"
                         android:layout_height="27dp"
                         android:layout_gravity="center_vertical"
@@ -115,6 +118,7 @@
                         android:textSize="12sp" />
 
                     <TextView
+                        android:id="@+id/tail_list_time"
                         android:layout_width="0dp"
                         android:layout_height="27dp"
                         android:layout_gravity="center_vertical"
