--- a/app/src/main/res/layout/activity_visa.xml
+++ b/app/src/main/res/layout/activity_visa.xml
@@ -129,15 +129,17 @@
                     android:layout_height="match_parent"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
                     android:gravity="center"
                     android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/visa_label"
-                        android:layout_width="110dp"
+                        android:layout_width="90dp"
                         android:layout_height="27dp"
                         android:layout_centerVertical="true"
-                        android:layout_marginRight="5dp"
+                        android:layout_marginLeft="5dp"
                         android:background="@drawable/shp_tail_list_select"
                         android:drawableRight="@mipmap/ic_down_arrow"
                         android:gravity="center"
@@ -147,12 +149,12 @@
                         android:textSize="12sp" />
 
                     <android.support.v4.widget.Space
-                        android:layout_width="20dp"
+                        android:layout_width="10dp"
                         android:layout_height="wrap_content" />
 
                     <TextView
                         android:id="@+id/visa_label2"
-                        android:layout_width="110dp"
+                        android:layout_width="90dp"
                         android:layout_height="27dp"
                         android:layout_centerVertical="true"
                         android:layout_marginRight="5dp"
@@ -161,6 +163,24 @@
                         android:drawableRight="@mipmap/ic_down_arrow"
                         android:gravity="center"
                         android:text="签证类型"
+                        android:textColor="@color/text_color"
+                        android:textSize="12sp" />
+
+                    <android.support.v4.widget.Space
+                        android:layout_width="10dp"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:id="@+id/visa_label3"
+                        android:layout_width="90dp"
+                        android:layout_height="27dp"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="5dp"
+                        android:layout_toRightOf="@+id/visa_label"
+                        android:background="@drawable/shp_tail_list_select"
+                        android:drawableRight="@mipmap/ic_down_arrow"
+                        android:gravity="center"
+                        android:text="签证区域"
                         android:textColor="@color/text_color"
                         android:textSize="12sp" />
                 </LinearLayout>
