--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,11 @@
     <color name="text_color2">#999999</color>
     <color name="text_color3">#666666</color>
     <color name="gray_bg">#eff2f7</color>
+    <color name="gray3">#515151</color>
+    <color name="gray4">#F4F4F6</color>
     <color name="gray_bg2">#f7f7f7</color>
     <color name="line2">#dddde2</color>
+    <color name="red">#DE2C1D</color>
+    <color name="yellow">#FCF8EF</color>
+    <color name="yellow2">#CAAF60</color>
 </resources>
