--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -60,10 +60,11 @@
                     android:id="@+id/product_recycle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
                     android:background="@color/white"
                     android:nestedScrollingEnabled="false"
                     android:overScrollMode="never"
-                    android:padding="10dp"
                     android:scrollbars="none" />
 
                 <android.support.design.widget.TabLayout
