--- a/app/src/main/res/layout/fragment_end_detail_tab1.xml
+++ b/app/src/main/res/layout/fragment_end_detail_tab1.xml
@@ -49,7 +49,17 @@
         android:overScrollMode="never"
         android:scrollbars="none" />
 
+    <TextView
+        android:id="@+id/end_detail_more"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="1dp"
+        android:gravity="center"
+        android:background="@color/white"
+        android:text="查看更多详细内容" />
+
     <android.support.v7.widget.RecyclerView
+        android:layout_marginTop="1dp"
         android:id="@+id/end_detail_tab1_recycle2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
