--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -33,7 +33,7 @@
                         <RelativeLayout
                             android:id="@+id/fragment_forum_relative"
                             android:layout_width="match_parent"
-                            android:layout_height="220dp">
+                            android:layout_height="180dp">
 
                             <com.youweihui.tourismstore.view.BannerView
                                 android:id="@+id/forum_banner"
@@ -83,13 +83,13 @@
                                 app:tabMode="fixed"
                                 app:tabSelectedTextColor="@color/orange" />
 
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentRight="true"
-                                android:layout_centerVertical="true"
-                                android:layout_marginRight="10dp"
-                                android:src="@mipmap/ic_home_more2" />
+                            <!--<ImageView-->
+                                <!--android:layout_width="wrap_content"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:layout_alignParentRight="true"-->
+                                <!--android:layout_centerVertical="true"-->
+                                <!--android:layout_marginRight="10dp"-->
+                                <!--android:src="@mipmap/ic_home_more2" />-->
                         </RelativeLayout>
 
                         <View
