--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -30,7 +30,7 @@
 
                     <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="220dp">
+                        android:layout_height="180dp">
 
                         <com.youweihui.tourismstore.view.BannerView
                             android:id="@+id/home_banner"
@@ -202,12 +202,12 @@
                         android:scrollbars="none"
                         app:tabSelectedTextColor="@color/orange" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:src="@mipmap/ic_home_more2" />
+                    <!--<ImageView-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_alignParentRight="true"-->
+                        <!--android:layout_centerVertical="true"-->
+                        <!--android:src="@mipmap/ic_home_more2" />-->
                 </RelativeLayout>
 
                 <RelativeLayout
