--- a/app/src/main/res/layout/item_product_top.xml
+++ b/app/src/main/res/layout/item_product_top.xml
@@ -2,16 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/item_product_top_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="1dp"
-        android:padding="10dp"
         android:layout_marginRight="1dp"
+        android:layout_marginBottom="1dp"
         android:gravity="center"
-        android:text="日本"
+        android:singleLine="true"
         android:textColor="@color/gray2" />
 </LinearLayout>
