--- a/app/src/main/res/layout/item_shop_tab.xml
+++ b/app/src/main/res/layout/item_shop_tab.xml
@@ -21,6 +21,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
         android:gravity="center"
+        android:textColor="@color/text_color"
         android:text="最牛逼的鳄鱼包"
         android:textSize="14dp" />
 
@@ -30,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="20dp"
         android:text="999积分"
         android:textColor="@color/orange"
         android:textSize="14dp" />
@@ -38,7 +39,7 @@
     <TextView
         android:id="@+id/shop_text2"
         android:layout_width="60dp"
-        android:layout_height="20dp"
+        android:layout_height="19dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="8dp"
