--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -62,6 +62,7 @@
                                     android:layout_marginLeft="10dp"
                                     android:layout_marginRight="10dp"
                                     android:gravity="center"
+                                    android:textColor="@color/text_color"
                                     android:text="热门爆款" />
 
                                 <View
@@ -100,7 +101,7 @@
                                         android:layout_marginLeft="10dp"
                                         android:layout_marginTop="5dp"
                                         android:gravity="center"
-                                        android:text="最牛逼的鳄鱼包"
+                                        android:textColor="@color/text_color"
                                         android:textSize="14dp" />
 
                                     <TextView
@@ -109,8 +110,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_alignParentBottom="true"
                                         android:layout_marginBottom="8dp"
-                                        android:layout_marginLeft="30dp"
-                                        android:text="999积分"
+                                        android:layout_marginLeft="20dp"
                                         android:textColor="@color/orange"
                                         android:textSize="14dp" />
 
@@ -153,7 +153,7 @@
                                         android:layout_marginLeft="10dp"
                                         android:layout_marginTop="5dp"
                                         android:gravity="center"
-                                        android:text="最牛逼的鳄鱼包"
+                                        android:textColor="@color/text_color"
                                         android:textSize="14dp" />
 
                                     <TextView
@@ -162,8 +162,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_alignParentBottom="true"
                                         android:layout_marginBottom="8dp"
-                                        android:layout_marginLeft="30dp"
-                                        android:text="999积分"
+                                        android:layout_marginLeft="20dp"
                                         android:textColor="@color/orange"
                                         android:textSize="14dp" />
 
@@ -211,6 +210,7 @@
                                     android:layout_marginLeft="10dp"
                                     android:layout_marginRight="10dp"
                                     android:gravity="center"
+                                    android:textColor="@color/text_color"
                                     android:text="旅行必备" />
 
                                 <View
@@ -249,7 +249,7 @@
                                         android:layout_marginLeft="10dp"
                                         android:layout_marginTop="5dp"
                                         android:gravity="center"
-                                        android:text="最牛逼的鳄鱼包"
+                                        android:textColor="@color/text_color"
                                         android:textSize="14dp" />
 
                                     <TextView
@@ -258,8 +258,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_alignParentBottom="true"
                                         android:layout_marginBottom="8dp"
-                                        android:layout_marginLeft="30dp"
-                                        android:text="999积分"
+                                        android:layout_marginLeft="20dp"
                                         android:textColor="@color/orange"
                                         android:textSize="14dp" />
 
@@ -302,7 +301,7 @@
                                         android:layout_marginLeft="10dp"
                                         android:layout_marginTop="5dp"
                                         android:gravity="center"
-                                        android:text="最牛逼的鳄鱼包"
+                                        android:textColor="@color/text_color"
                                         android:textSize="14dp" />
 
                                     <TextView
@@ -311,8 +310,7 @@
                                         android:layout_height="wrap_content"
                                         android:layout_alignParentBottom="true"
                                         android:layout_marginBottom="8dp"
-                                        android:layout_marginLeft="30dp"
-                                        android:text="999积分"
+                                        android:layout_marginLeft="20dp"
                                         android:textColor="@color/orange"
                                         android:textSize="14dp" />
 
@@ -366,6 +364,7 @@
 
                         <android.support.design.widget.TabLayout
                             android:id="@+id/shop_tb_seat"
+                            android:layout_marginTop="5dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@color/white"
