--- a/app/src/main/res/layout/item_forum1.xml
+++ b/app/src/main/res/layout/item_forum1.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="120dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item_forum1_relative"
-    android:background="@color/white">
+    android:layout_width="match_parent"
+    android:layout_height="250dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginRight="10dp"
+    android:background="@drawable/shp_forum">
 
     <ImageView
         android:id="@+id/item_forum1_img"
@@ -29,30 +33,19 @@
         android:id="@+id/item_forum1_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/item_forum1_name"
         android:layout_below="@+id/item_forum1_name"
+        android:layout_alignLeft="@+id/item_forum1_name"
         android:layout_marginTop="3dp"
         android:text="2108-04-06 14:41"
         android:textSize="12sp" />
 
     <TextView
-        android:id="@+id/item_forum1_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/item_forum1_img"
-        android:layout_marginLeft="12dp"
-        android:lines="2"
-        android:textColor="@color/text_color"
-        android:text="自从有了抖音，每天过着帝王般的生活，有人献歌献舞、表演才艺、朕还要挨个儿评阅点评盖红章，甚是劳累啊。"
-        android:textSize="14sp" />
-
-    <TextView
         android:id="@+id/item_forum1_eye"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:layout_alignBottom="@+id/view"
-        android:layout_marginBottom="2dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginRight="10dp"
+        android:layout_marginBottom="2dp"
         android:layout_toLeftOf="@+id/item_forum1_praise"
         android:drawableLeft="@drawable/selector_forum_eye"
         android:drawablePadding="5dp"
@@ -79,102 +72,33 @@
         android:id="@+id/item_forum1_reply"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="2dp"
-        android:gravity="center"
+        android:layout_alignParentBottom="true"
         android:layout_marginRight="10dp"
+        android:layout_marginBottom="2dp"
         android:drawableLeft="@drawable/selector_forum_reply"
         android:drawablePadding="3dp"
+        android:gravity="center"
         android:text="1234"
         android:textSize="11sp" />
 
     <ImageView
-        android:id="@+id/item_forum2_img"
-        android:layout_width="120dp"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_margin="10dp"
-        android:scaleType="fitXY" />
+        android:src="@mipmap/ic_shar" />
 
-    <TextView
-        android:id="@+id/item_forum2_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/item_forum2_content"
-        android:layout_below="@+id/item_forum2_content"
+    <com.youweihui.tourismstore.view.CustomImageView
+        android:id="@+id/item_forum1_center_img"
+        android:layout_width="match_parent"
+        android:layout_height="160dp"
+        android:layout_below="@+id/item_forum1_time"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
-        android:maxEms="15"
-        android:textColor="@color/text_color"
-        android:text="浅子影"
-        android:textSize="13sp"
-        android:typeface="sans" />
-
-    <TextView
-        android:id="@+id/item_forum2_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/item_forum2_name"
-        android:layout_marginBottom="1dp"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/item_forum2_name"
-        android:text="2108-04-06 14:41"
-        android:textSize="12sp" />
-
-    <TextView
-        android:id="@+id/item_forum2_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/item_forum2_img"
-        android:layout_toEndOf="@+id/item_forum2_img"
-        android:layout_toRightOf="@+id/item_forum2_img"
-        android:lines="2"
-        android:textColor="@color/text_color"
-        android:text="自从有了抖音，每天过着帝王般的生活，有人献歌献舞、表演才艺、朕还要挨个儿评阅点评盖红章，甚是劳累啊。"
-        android:textSize="15sp" />
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="@color/gray" />
-
-    <!--<TextView-->
-        <!--android:id="@+id/item_forum2_eye"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignBottom="@+id/item_forum2_img"-->
-        <!--android:layout_alignLeft="@+id/item_forum2_name"-->
-        <!--android:drawableLeft="@mipmap/ic_eye"-->
-        <!--android:drawablePadding="5dp"-->
-        <!--android:text="568659"-->
-        <!--android:textSize="11sp" />-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/item_forum2_praise"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignBottom="@+id/item_forum2_eye"-->
-        <!--android:layout_toEndOf="@+id/item_forum2_eye"-->
-        <!--android:layout_toRightOf="@+id/item_forum2_eye"-->
-        <!--android:drawableLeft="@mipmap/ic_praise"-->
-        <!--android:drawablePadding="5dp"-->
-        <!--android:layout_marginLeft="10dp"-->
-        <!--android:text="213124"-->
-        <!--android:textSize="11sp" />-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/item_forum2_reply"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignBottom="@+id/item_forum2_praise"-->
-        <!--android:layout_toEndOf="@+id/item_forum2_praise"-->
-        <!--android:layout_toRightOf="@+id/item_forum2_praise"-->
-        <!--android:drawableLeft="@mipmap/ic_reply"-->
-        <!--android:layout_marginLeft="10dp"-->
-        <!--android:drawablePadding="3dp"-->
-        <!--android:text="1234"-->
-        <!--android:textSize="11sp" />-->
+        android:layout_marginRight="15dp"
+        android:scaleType="fitXY"
+        app:corner_radius="10dp" />
 </RelativeLayout>
