--- a/app/src/main/res/layout/item_special.xml
+++ b/app/src/main/res/layout/item_special.xml
@@ -23,13 +23,13 @@
                 android:background="@color/gray" />
 
             <TextView
+                android:id="@+id/item_special_title"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:gravity="center"
-                android:textColor="@color/text_color"
-                android:text="专题小标题" />
+                android:textColor="@color/text_color"/>
 
             <View
                 android:layout_width="40dp"
